<resources>

    <string name="app_name" >University Info</string>
    <string name="my_university_name"><![CDATA[University of Information Technology & Sciences]]></string>
    <string name="iub_name"><![CDATA[Independent University, Bangladesh]]></string>
    <string name="nsu_name"><![CDATA[North South University]]></string>
    <string name="aiub_name"><![CDATA[American International University, Bangladesh]]></string>
    <string name="uiu_name"><![CDATA[United International University]]></string>
    <string name="ewu_name"><![CDATA[East West University]]></string>

    <string name="uits_about">University of Information Technology &amp; Sciences (UITS), the first IT-based private university in Bangladesh was founded on 7 August 2003 as a non-profit organization &amp; EIIN is 136666.  University of Information Technology &amp; Sciences (UITS), a concern of PHP Family headed by Alhaj Sufi Mohamed Mizanur Rahman is the sponsor of UITS. The guiding spirit behind the endeavor is “divine blessings, mixed with hard work, backed by good intentions, make miracles.\n\nThe government was pleased with the UITS’s infrastructure and teaching program and allowed the university to run its activities. The order of the government was turned into action from 07 August 2003. And till then UITS conducts all its activities  as per its Vision, Mission, Goals, and Commitment to Quality Education with a view to shaping a complete, effective and efficient manpower.\n\nUITS added the latest education system to its curriculum to developing the knowledge and skills of the students as well as integrated human values in the education system.  UITS is a science and technological knowledge-based center that provides marketable skills for younger generations who may be gainfully employed both national and international organizations.</string>
    <string name="iub_about">Established in 1993, Independent University, Bangladesh (IUB) is the leading private university in Bangladesh with an explicit focus on research and global partnerships. With a current enrollment of around 12,000 at undergraduate and graduate levels, more than 450 highly qualified faculty members (47% of whom have PhD degrees), and an alumni strength of close to 18,000, IUB strives to ensure education for all to promote the national agenda of sustainable inclusive development.\n\nOur mission is to achieve the goals of higher education and of sustainable economic growth in the country through a two-way relationship between community and university.\n\n IUB\'s goals are to produce graduates of international standards within the local environment, with knowledge and relevant skills to provide leadership in enterprise, public service and welfare; encourage and support useful research; create knowledge; and provide further learning opportunities for adults. The curriculum objectives for the undergraduate education are to teach communicative skills (oral and written communication and computer skills) with a strong humanities background, knowledge and competence in a subject (i.e. a major), and a sub-specialization (minor) in a related subject. This is commensurate with the ultimate goal of equipping students with middle management skills and the background necessary to pursue higher studies.</string>
    <string name="nsu_about">North South University (NSU), the first private university in Bangladesh, was established in 1992 by the then Foundation for Promotion of Education and Research (FPER), a charitable, non-profit, non-commercial and non-political organization. The FPER later was renamed as the NSU Foundation and is presently called The North South Foundation for Education and Research. The Foundation is comprised of a group of eminent industrialists, prominent patrons of education, notable philanthropists, widely experienced academics and senior civil servants of the country. In the early 1990s, they had a dream to set up a world-class university as a center of excellence in higher education in the private sector. Their dedication, tireless efforts, and hard work paved the way for the approval of the establishment of NSU.</string>
    <string name="aiub_about">American International University - Bangladesh (AIUB) is a government approved private university founded in 1994 by Dr. Anwarul Abedin. The university is an independent organization with its own Board of Trustees.Initial Government Approval. The University received its initial Approval for Establishment and Operation on 6th November 1995, available here.Permanent Government Approval. The University was conferred with the certificate of Permanent Establishment and Operation on 25 October 2023,</string>
    <string name="uiu_about">United International University is a private university approved by the Government of the People’s Republic of Bangladesh and University Grants Commission (UGC).United International University is established with the generous support and patronage of the United Group, a very successful conglomerate operating in diverse business areas in Bangladesh.\n\nThe vision of UIU is to become the center of excellence in teaching, learning and research in the South Asian region.\n\nThe mission of UIU is to create excellent human resources with intellectual, creative, technical, moral and practical skills to serve community, industry and region. We do it by developing integrated, interactive, involved and caring relationships among teachers, students, guardians and employers.</string>
    <string name="ewu_about">East-West University was founded in 1980 with the mission of providing quality, affordable, multi-cultural, and forward-looking higher education to Chicago and the world. The institution has grown and prospered over the years, from a noble idea to significant institution of higher learning. The University maintains a unique place among institutions of higher learning in Chicago and the region. East-West is repeatedly cited as having the lowest tuition among private schools in the Chicago area, making a higher education with personal attention more accessible.</string>


    <string name="my_university_desc">University of Information Technology &amp; Sciences (UITS), the first IT-based private university in Bangladesh was founded on 7 August 2003 as a non-profit organization &amp; EIIN is 136666. University of Information Technology &amp; Sciences (UITS), a concern of PHP Family headed by Alhaj Sufi Mohamed Mizanur Rahman is the sponsor of UITS. The guiding spirit behind the endeavor is “divine blessings, mixed with hard work, backed by good intentions, make miracles. The government was pleased with the UITS’s infrastructure and teaching program and allowed the university to run its activities. The order of the government was turned into action from 07 August 2003. And till then UITS conducts all its activities as per its Vision, Mission, Goals, and Commitment to Quality Education with a view to shaping a complete, effective and efficient manpower. UITS added the latest education system to its curriculum to developing the knowledge and skills of the students as well as integrated human values in the education system. UITS is a science and technological knowledge-based center that provides marketable skills for younger generations who may be gainfully employed both national and international organizations.</string>
    <string name="nsuDesc">North South University is one of the most leading universities in Bangladesh. It is situated at Bashundhara R</string>
    <string name="aiubDesc">American International University is one of the most leading universities in Bangladesh. It is situated at Kuril</string>
    <string name="uiuDesc">United International University is one of the most leading universities in Bangladesh. It is situated at Madani Ave</string>
    <string name="ewuDesc">East West University is one of the most leading universities in Bangladesh. It is situated at Rampura</string>
    <string name="iubDesc">Independent University Bangladesh is one of the most leading universities in Bangladesh. It is situated at Bashundhara</string>
    <string name="uitsDesc">University of Information Technology &amp; Sciences is one of the most leading universities in Bangladesh. It is situated at Natun Bazar</string>
</resources>