<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherActivity"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <TextView
        android:id="@+id/headName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Top Private University in Bangladesh"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:fontFamily="@font/unineue_trial_regular"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <RelativeLayout
            android:id="@+id/nsuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cutom_layout"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/nsuImage"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/nsu" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/nsuImage"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:id="@+id/nsuName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="North South University"
                    android:textStyle="bold"
                    android:fontFamily="@font/unineue_trial_regular"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nsuDesc"
                    android:fontFamily="@font/unineue_trial_regular"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                />
        <RelativeLayout
            android:id="@+id/aiubLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cutom_layout"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/aiubImage"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/aiub" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/aiubImage"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:id="@+id/aiubName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="American International University, Bangladesh"
                    android:textStyle="bold"
                    android:fontFamily="@font/unineue_trial_regular"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aiubDesc"
                    android:fontFamily="@font/unineue_trial_regular"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                />
        <RelativeLayout
            android:id="@+id/uiuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cutom_layout"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/uiuImage"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/uiu" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/uiuImage"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:id="@+id/uiuName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="United International University"
                    android:textStyle="bold"
                    android:fontFamily="@font/unineue_trial_regular"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uiuDesc"
                    android:fontFamily="@font/unineue_trial_regular"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                />
        <RelativeLayout
            android:id="@+id/uitsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cutom_layout"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/uitsImage"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/uits" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/uitsImage"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:id="@+id/uitsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/my_university_name"
                    android:fontFamily="@font/unineue_trial_regular"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uitsDesc"
                    android:fontFamily="@font/unineue_trial_regular"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                />
        <RelativeLayout
            android:id="@+id/ewuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cutom_layout"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ewuImage"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ewu" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/ewuImage"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:id="@+id/ewutext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="East West University"
                    android:textStyle="bold"
                    android:fontFamily="@font/unineue_trial_regular"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ewuDesc"
                    android:fontFamily="@font/unineue_trial_regular"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                />
        <RelativeLayout
            android:id="@+id/iubLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cutom_layout"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/iubImage"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:src="@drawable/iub"
                android:scaleType="centerCrop"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/iubImage"
                android:layout_marginTop="12dp"
                >
                <TextView
                    android:id="@+id/universityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="Independent University, Bangladesh"
                    android:textStyle="bold"
                    android:fontFamily="@font/unineue_trial_regular"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iubDesc"
                    android:fontFamily="@font/unineue_trial_regular"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>